--- a/src/components/EventGroup/Groups/styles.module.scss
+++ b/src/components/EventGroup/Groups/styles.module.scss
@@ -2,4 +2,5 @@
     gap: 1rem;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
