--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -219,3 +219,36 @@ span.translator-de {
     mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M9,10V12H7V10H9M13,10V12H11V10H13M17,10V12H15V10H17M19,3A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H6V1H8V3H16V1H18V3H19M19,19V8H5V19H19M9,14V16H7V14H9M13,14V16H11V14H13M17,14V16H15V14H17Z' /%3E%3C/svg%3E");
   }
 }
+
+
+@media screen and (max-width: 1200px) {
+  div.full-width {
+    div[role='tabpanel'] {
+        margin-left: -1.5rem;
+        margin-right: -1.5rem;
+    }
+  }
+}
+
+@media screen and (max-width: 996px) {
+  div.full-width {
+     div[role='tabpanel'] {
+          margin-left: -0.8rem;
+          margin-right: -0.8rem;
+      }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  div.full-width {
+    div[role='tabpanel'] {
+        margin-left: -0.8rem;
+        margin-right: -0.8rem;
+    }
+  }
+  
+  div[role='tabpanel'].full-width {
+    margin-left: -0.8rem;
+    margin-right: -0.8rem;
+  }
+}
